Update from https://github.com/tianhaoz95/one/commit/045fabfd059c87bae23d5d92fda185a2e9155835

--- a/package.json
+++ b/package.json
@@ -1,24 +1,37 @@
 {
   "name": "setup-gh-cli",
-  "version": "1.0.0",
-  "description": "An action to setup GitHub CLI.",
+  "version": "0.0.1",
+  "description": "A GitHub action to setup GitHub CLI.",
+  "keywords": [
+    "actions"
+  ],
+  "author": "Tianhao Zhou <tianhaoz@umich.edu>",
+  "homepage": "https://github.com/tianhaoz95/one",
+  "license": "MIT",
   "main": "lib/index.js",
-  "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "directories": {
+    "lib": "lib"
   },
+  "files": [
+    "lib"
+  ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/tianhaoz95"
+    "url": "git+https://github.com/tianhaoz95/one.git"
   },
-  "author": "Tianhao Zhou",
-  "license": "MIT",
-  "devDependencies": {
-    "typescript": "^4.0.3"
+  "scripts": {
+    "build": "tsc",
+    "test": "echo \"Error: run tests from root\" && exit 1"
+  },
+  "bugs": {
+    "url": "https://github.com/tianhaoz95/one/issues"
   },
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@actions/exec": "^1.0.4",
     "@actions/github": "^4.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.0.5"
   }
 }
