--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@actions/exec": "^1.0.4",
-    "@actions/github": "^4.0.0"
+    "@actions/github": "^4.0.0",
+    "@actions/glob": "^0.1.0",
+    "@actions/io": "^1.0.2"
   },
   "devDependencies": {
     "typescript": "^4.0.5"
